objects/APTS_Block_Codes__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Block_Code_Description__c</fullName>
        <description>Block Code Description</description>
        <label>Block Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Block_Code__c</fullName>
        <label>Block Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAE-AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qatar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Notification_Type__c</fullName>
        <label>Notification Type</label>
        <picklist>
            <picklistValues>
                <fullName>ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARNING</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>R4.1 - Used for Requirement RQ-241</description>
        <label>Object Type</label>
        <picklist>
            <picklistValues>
                <fullName>QUOTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Block Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>APTS_Country__c</columns>
        <columns>NAME</columns>
        <columns>APTS_Block_Code__c</columns>
        <columns>APTS_Block_Code_Description__c</columns>
        <columns>APTS_Notification_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Block Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Block Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>